# ChangeLog for dev-python/sqlobject
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/sqlobject/ChangeLog,v 1.28 2008/05/10 01:18:24 chtekk Exp $

*sqlobject-0.10.1 (10 May 2008)
*sqlobject-0.9.6 (10 May 2008)

  10 May 2008; Luca Longinotti <chtekk@gentoo.org> +sqlobject-0.9.6.ebuild,
  +sqlobject-0.10.1.ebuild:
  Version bump.

*sqlobject-0.10.0 (23 Mar 2008)
*sqlobject-0.9.5 (23 Mar 2008)

  23 Mar 2008; Luca Longinotti <chtekk@gentoo.org>
  -files/converters-0.6.1-gentoo.diff, -sqlobject-0.6.1-r1.ebuild,
  -sqlobject-0.9.2.ebuild, +sqlobject-0.9.5.ebuild,
  +sqlobject-0.10.0.ebuild:
  Version bump to newest 0.9 and 0.10 series.

*sqlobject-0.9.2 (04 Nov 2007)

  04 Nov 2007; Lukasz Strzygowski <lucass@gentoo.org>
  -sqlobject-0.9.1.ebuild, +sqlobject-0.9.2.ebuild:
  Version bump. Dropped old version.

*sqlobject-0.9.1 (04 Sep 2007)

  04 Sep 2007; Lukasz Strzygowski <lucass@gentoo.org>
  -sqlobject-0.9.0-r1.ebuild, +sqlobject-0.9.1.ebuild:
  Version bump, fixed pysqlite dep. Dropped old version.

  04 Jul 2007; Lukasz Strzygowski <lucass@gentoo.org>
  sqlobject-0.6.1-r1.ebuild, sqlobject-0.9.0-r1.ebuild:
  Removed use_setuptools sed in 0.9.0-r1. Small cleanup in 0.6.1-r1.

*sqlobject-0.9.0-r1 (04 Jul 2007)

  04 Jul 2007; Rob Cakebread <pythonhead@gentoo.org>
  -sqlobject-0.9.0.ebuild, +sqlobject-0.9.0-r1.ebuild:
  Removed setuptools sed. bug# 184039

*sqlobject-0.9.0 (23 Jun 2007)

  23 Jun 2007; Lukasz Strzygowski <lucass@gentoo.org>
  -sqlobject-0.8.1.ebuild, -sqlobject-0.8.3.ebuild, +sqlobject-0.9.0.ebuild:
  Version bump. Dropped old versions.

*sqlobject-0.8.3 (05 May 2007)

  05 May 2007; Lukasz Strzygowski <lucass@gentoo.org>
  -sqlobject-0.7.3.ebuild, sqlobject-0.8.1.ebuild, +sqlobject-0.8.3.ebuild:
  Version bump, dropped old version, 0.8.1 left for stabilisation. Fixed
  pysqlite dep.

  02 May 2007; Rob Cakebread <pythonhead@gentoo.org> Manifest:
  Fixed Manifest.
